syntax = "proto3";

package proto;

import "adresse.proto";
import "chambre.proto";
import "reservation.proto";
import "offre.proto";

message Hotel {
  int64 idHotel = 1;
  string nom = 2;
  Adresse adresse = 3;
  int32 nombreEtoiles = 4;
  string imageHotel = 5;
  repeated Chambre chambres = 6;
  repeated Reservation reservations = 7;
  repeated Offre offres = 8;
}
